# const-siphash-rs

./: Cargo.toml  README.md
.github/: dependabot.yml
src/: lib.rs  sip.rs  sip128.rs
