[package]
authors = ["Daniel Bloom"]
keywords = ["crypto","hash","siphash","const"]
license = "MIT/Apache-2.0"
name = "const-siphasher"
description = "SipHash-2-4, SipHash-1-3 and 128-bit variants in pure Rust"
repository = "https://github.com/Daniel-Aaron-Bloom/const-siphash-rs"
homepage = "https://docs.rs/const-siphasher"
documentation = "https://docs.rs/siphasher"
readme = "README.md"
version = "1.0.2"
categories = ["algorithms", "cryptography"]
edition = "2018"

[profile.release]
lto = true
panic = "abort"
opt-level = 3

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["std"]
serde_std = ["std", "serde/std"]
serde_no_std = ["serde/alloc"]
std = []
